# homebrew-webp-converter

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml  requirements.txt  webp-convert.rb
webp_converter_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
